--- a/index.html
+++ b/index.html
@@ -14,16 +14,27 @@
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+      defer
     ></script>
     <script
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+      defer
     ></script>
   </head>
   <body class="font-domine">
     <header>
       <div>
-        <div></div>
+        <div>
+          <ion-icon name="menu-outline"></ion-icon>
+        </div>
+        <div>
+          <a href="index.html">
+            <div>
+              <img src="./src/images/logo.png" alt="Logo" />
+            </div>
+          </a>
+        </div>
       </div>
     </header>
   </body>
